<resources>
    <string name="app_name">Museo AR</string>

    <!--Strings para login, SignUp y ForgotPassword-->
    <string name="login_email">Email</string>
    <string name="login_password">Contraseña</string>
    <string name="login_confirm_password">Confrimar Contraseña</string>
    <string name="login_sign_in">Ingresar</string>
    <string name="login_sign_Up">Registrarse</string>
    <string name="login_reset_password">Restaurar Contraseña</string>
    <string name="login_forgot_password">Olvidaste la contraseña?</string>
    <string name="login_create_account">Crear una cuenta</string>
    <string name="login_go_login">Regresar</string>
    <string name="login_sign_in_google">Ingresar con google</string>
    <string name="login_sign_in_facebook">Ingresar con facebook</string>
    <!--Strings para login, SignUp y ForgotPassword-->

    <!--Strings para los rates-->
    <string name="dialog_title">Rate the app!!</string>
    <string name="dialog_edit_text_hint">Leave your Feed</string>
    <string name="dialog_ok">Rate</string>
    <string name="dialog_cancel">Cancel</string>
    <!--Strings para los rates-->

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
