<?xml version="1.0" encoding="utf-8"?>

<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        android:fillViewport="true"
        tools:context=".Login.LoginActivity"
    >
    <android.support.constraint.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".Login.LoginActivity">

        <EditText
                android:id="@+id/editTextEmail"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:hint="@string/login_email"
                android:background="@drawable/edittext_rouded"
                android:paddingLeft="@dimen/login_edit_text_space"
                android:paddingRight="@dimen/login_edit_text_space"
                android:layout_height="@dimen/login_edit_text_height"
                android:layout_marginTop="100dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="32dp" android:layout_marginEnd="32dp"
                app:layout_constraintHorizontal_bias="1.0" app:layout_constraintVertical_chainStyle="spread_inside"/>

        <EditText
                android:id="@+id/editTextPassword"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:hint="@string/login_password"
                android:background="@drawable/edittext_rouded"
                android:paddingLeft="@dimen/login_edit_text_space"
                android:paddingRight="@dimen/login_edit_text_space"
                android:layout_height="@dimen/login_edit_text_height"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextEmail" android:layout_marginBottom="32dp"
                app:layout_constraintBottom_toTopOf="@+id/buttonLogIn" android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"/>

        <Button
                android:id="@+id/buttonLogIn"
                android:layout_width="147dp"
                android:layout_height="wrap_content"
                android:height="@dimen/login_button_xl_height"
                android:text="@string/login_sign_in"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/login_text_xl_size"
                android:textAllCaps="false"
                android:background="@drawable/button_ripple_bg"

                app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="16dp" app:layout_constraintBottom_toTopOf="@+id/textViewForgotPassword"
                android:layout_marginStart="32dp" android:layout_marginEnd="32dp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_forgot_password"
                android:textColor="@color/colorSecondaryText"
                android:textColorHighlight="@color/colorBackGroundWhite"
                android:id="@+id/textViewForgotPassword"
                app:layout_constraintTop_toBottomOf="@+id/buttonLogIn" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="116dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="115dp"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/buttonLogInGoogle"/>

        <Button
                android:id="@+id/buttonLogInGoogle"
                android:layout_height="@dimen/login_button_height"
                android:layout_width="116dp"
                android:text="@string/login_sign_in_google"
                android:textColor="@color/colorBackGroundWhite"
                android:background="@drawable/button_ripple_google"

                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/textViewForgotPassword"
                android:layout_marginStart="32dp"/>
        <Button
                android:id="@+id/buttonLogInFacebook"
                android:layout_height="@dimen/login_button_height"
                android:layout_width="116dp"
                android:text="@string/login_sign_in_facebook"
                android:textColor="@color/colorBackGroundWhite"
                android:background="@drawable/button_ripple_facebook"
                app:layout_constraintStart_toEndOf="@+id/buttonLogInGoogle"
                android:layout_marginStart="76dp" android:layout_marginBottom="103dp"
                app:layout_constraintBottom_toTopOf="@+id/buttonSignUp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="32dp" android:layout_marginTop="33dp"
                app:layout_constraintTop_toBottomOf="@+id/textViewForgotPassword" app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintVertical_bias="0.0"/>
        <Button
                android:id="@+id/buttonSignUp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_button_height"
                android:text="@string/login_sign_Up"
                android:background="@drawable/button_ripple_sign_up"
                android:textSize="15sp"
                android:textColor="@color/colorSecondaryText"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintBottom_toBottomOf="parent"/>


    </android.support.constraint.ConstraintLayout>

</ScrollView>
